# Neoarc-engine

./: README.md
games/: readme.md
site/: index.html
site/assets/css/: style.css
site/assets/js/: script.js
site/download/: linux.sh  macos.sh  windows.ps1
site/games/: games.json
site/learning/: learning.json
site/pages/: creators.html  download.html  games.html  learning.html  search.html  status.html  support.html  versions.html  wiki.html
tui/: CMakeLists.txt  LICENSE  Makefile  NOTES.md  README.md
tui/cli/: box.c  box.h  commands.c  commands.h  config.c  config.h  main.c  menu.c  menu.h
tui/engine/frecli/include/fc/: colors.h  frecli.h  lib.h  limits.h  term.h  types.h
tui/engine/frecli/src/: term.c
tui/engine/input/: input.c  input.h  keymap.c  keymap.h
tui/engine/physics/: collision.c  physics.c  physics.h
tui/engine/renderer/: renderer.c  renderer.h  sprite.c
tui/engine/utils/: logger.c  logger.h  timer.c  timer.h
tui/games/normal/platformer/: platformer.c  platformer.h
tui/games/normal/platformer/assets/: map1.txt
tui/games/normal/snake/: snake.c  snake.h
tui/games/normal/snake/assets/: snake_level1.txt
tui/games/normal/tetris/: tetris.c  tetris.h
tui/games/normal/tetris/assets/: blocks.txt
tui/include/: engine.h  input.h  neoarc.h  renderer.h
tui/learning/challenges/: challenge1.c  challenge2.c
tui/learning/progress/: progress.json
tui/learning/tutorials/: lesson1.txt  lesson2.txt  lesson3.txt
